--- a/main/templates/main/galerie.html
+++ b/main/templates/main/galerie.html
@@ -61,7 +61,7 @@
 <style>
 /* Bande titre */
 .band-title {
-    background: linear-gradient(90deg, #1e3c72, #2a5298);
+    background: linear-gradient(90deg, #2e58a7ff, #4674c2ff);
     color: #fff;
     text-align: center;
     font-size: 1.5rem;
@@ -71,6 +71,19 @@
     margin-bottom: 20px;
     box-shadow: 0 4px 10px rgba(0,0,0,0.2);
 }
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+
+  background: radial-gradient(circle, #eaedeeff, #8f9296ff);
+
+    /* Optionnel : occupe toute la hauteur de l'écran */
+    min-height: 100vh;
+}
+
+
 
 /* Images & vidéos */
 .gallery-card {
