Ajout des fichiers pour déploiement Render

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -91,7 +91,7 @@
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'services' %}">Notre équipe</a></li>
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'galerie' %}">Galerie</a></li>
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'prestation' %}">Nos services</a></li>
-                           <!-- <li class="nav-item"><a class="nav-link text-black" href="{% url 'boutique' %}">Boutique</a></li> -->
+                            <li class="nav-item"><a class="nav-link text-black" href="{% url 'boutique' %}">Boutique</a></li>
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'contact' %}">Contact</a></li>
                             <li class="nav-item">
                                 <a class="btn btn-outline-light btn-sm text-black" href="{% url 'inscription' %}">S'inscrire</a>
