--- a/main/templates/boutique/panier.html
+++ b/main/templates/boutique/panier.html
@@ -131,7 +131,10 @@
         <h4>Total Général : <strong>{{ total|floatformat:0 }} FCFA</strong></h4>
         <div class="mt-3 mt-md-0">
             <a href="{% url 'boutique' %}" class="btn btn-secondary btn-custom me-2">Continuer mes achats</a>
-            <a href="#" class="btn btn-success btn-custom">Valider mon panier</a>
+            <a href="{{ whatsapp_url }}" target="_blank" class="btn btn-success">
+    Commander via WhatsApp
+</a>
+
         </div>
     </div>
     {% else %}
